[gd_scene load_steps=13 format=3 uid="uid://dwcuc7i4hw42j"]

[ext_resource type="Script" path="res://main.gd" id="1_kg2my"]
[ext_resource type="PackedScene" uid="uid://dchr40oo6gu6k" path="res://player.tscn" id="1_kh7vp"]
[ext_resource type="PackedScene" uid="uid://b7qwmv3fxw5hd" path="res://mob.tscn" id="2_c1wly"]
[ext_resource type="Theme" uid="uid://bfxpohtpjauqx" path="res://theme.tres" id="4_nw075"]
[ext_resource type="Script" path="res://ScoreLabel.gd" id="5_an8km"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7ldec"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_p8jqt"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxShape3D" id="BoxShape3D_vhgkc"]
size = Vector3(1, 1, 52)

[sub_resource type="BoxShape3D" id="BoxShape3D_yml5h"]
size = Vector3(51, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3ugp3"]
albedo_color = Color(0.898039, 0.576471, 0.729412, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_w8bea"]
material = SubResource("StandardMaterial3D_3ugp3")

[sub_resource type="Curve3D" id="Curve3D_ds4q8"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -24, 0, 15, 0, 0, 0, 0, 0, 0, 24, 0, 15, 0, 0, 0, 0, 0, 0, 24, 0, -31, 0, 0, 0, 0, 0, 0, -24, 0, -31, 0, 0, 0, 0, 0, 0, -24, 0, 15),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_kg2my")
mob_scene = ExtResource("2_c1wly")

[node name="Ground" type="StaticBody3D" parent="."]
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("BoxShape3D_7ldec")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = SubResource("BoxMesh_p8jqt")

[node name="Wall" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 0, 0)
shape = SubResource("BoxShape3D_vhgkc")

[node name="Wall3" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 23)
shape = SubResource("BoxShape3D_yml5h")

[node name="Wall4" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 0, 0)
shape = SubResource("BoxShape3D_vhgkc")

[node name="Wall5" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -23)
shape = SubResource("BoxShape3D_yml5h")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.151261, 0.988494, 0, -0.988494, 0.151261, 0, 56, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_kh7vp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 15)

[node name="CameraPivot" type="Marker3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 9, 23)
fov = 60.0

[node name="Cylinders" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 1, -23)
mesh = SubResource("CylinderMesh_w8bea")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 1, 23)
mesh = SubResource("CylinderMesh_w8bea")
skeleton = NodePath("../MeshInstance3D")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24, 1, -23)
mesh = SubResource("CylinderMesh_w8bea")
skeleton = NodePath("../MeshInstance3D")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24, 1, 23)
mesh = SubResource("CylinderMesh_w8bea")
skeleton = NodePath("../MeshInstance3D")

[node name="Spawnpath" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 8)
curve = SubResource("Curve3D_ds4q8")

[node name="Spawnlocation" type="PathFollow3D" parent="Spawnpath"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -24, 0, 15)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 74.0
offset_top = 35.0
offset_right = 175.0
offset_bottom = 73.0
theme = ExtResource("4_nw075")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score : 0"
script = ExtResource("5_an8km")

[node name="Retry" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 28.825
anchor_bottom = 16.175
offset_bottom = -6.10352e-05
grow_horizontal = 2
grow_vertical = 2
color = Color(0.313726, 0.313726, 0.313726, 0.407843)

[node name="Label" type="Label" parent="UI/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -13.0
offset_right = 76.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_nw075")
text = "Press Enter to Retry"

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_timer_timeout"]
